--- a/index.html
+++ b/index.html
@@ -238,8 +238,8 @@
 
         <!-- Block ... -->
         <div class="container" style="margin-top: 15px">
-          <section class="app-box">
-            <ul class="list-show-info">
+          <section class="app-box app-list">
+            <ul class="list-show-info" >
               <li>
                 <div class="button_under_list">
                   <h4>កម្មវិធីសិក្សា</h4>
