--- a/app/department.html
+++ b/app/department.html
@@ -101,7 +101,7 @@
               <!-- End Shape -->
               <ul class="navbar-nav">
                 <li class="nav-item">
-                  <a href="./index.html" class="nav-link">
+                  <a href="/index.html" class="nav-link">
                     <svg
                       xmlns="http://www.w3.org/2000/svg"
                       width="20"
@@ -117,14 +117,14 @@
                   </a>
 
                   <!-- Spcaner -->
-                  <span class="bar_size active"></span>
+                  <span class="bar_size "></span>
                 </li>
                 <li class="nav-item">
                   <a href="./department.html" class="nav-link">
                     <p>អំពីដេប៉ាតឺម៉ង់</p>
                   </a>
                   <!-- Spcaner -->
-                  <span class="bar_size"></span>
+                  <span class="bar_size active"></span>
                 </li>
                 <li class="nav-item">
                   <a href="#" class="nav-link">
