--- a/app/department.html
+++ b/app/department.html
@@ -101,7 +101,7 @@
               <!-- End Shape -->
               <ul class="navbar-nav">
                 <li class="nav-item">
-                  <a href="/index.html" class="nav-link">
+                  <a href="./index.html" class="nav-link">
                     <svg
                       xmlns="http://www.w3.org/2000/svg"
                       width="20"
